fix landing page bloc on IE

--- a/css/homepage.css
+++ b/css/homepage.css
@@ -259,10 +259,10 @@ body {
 }
 .black_block {
 	position:relative;
-	top:60px;
- 	width:600px;
-	height:225px;
-	background:#333;
+	top:293px;
+ 	width:598px;
+	height:223px;
+	background:url(../img/bloc_home.png) no-repeat;
 	text-align:center;
 	
 	border-radius:10px;
@@ -273,14 +273,6 @@ body {
 	box-shadow:0 5px 10px #000;
 	-moz-box-shadow: 0 5px 10px #000;
 	-webkit-box-shadow: 0 5px 10px #000;
-}
-.black_block_ribbon {
-	position:relative;
-	top:293px;
-	width:600px;
-	height:225px;
-	background: url(../img/bloc_dotted2.png);
-	z-index:9;
 }
 
 /*--------------------------------------------------------
